--- a/home.html
+++ b/home.html
@@ -8,15 +8,15 @@
       <nav>
         <ul>
           <li>
-            <a href="file:///C:/Users/robfe/OneDrive/Desktop/BBQ%20Sauce/Main.html">Main page</a>
+            <a href="Main.html">Main page</a>
           </li>
 
           <li>
-            <a href="file:///C:/Users/robfe/OneDrive/Desktop/BBQ%20Sauce/about.html">About</a>
+            <a href="about.html">About</a>
           </li>
 
           <li>
-            <a href="file:///C:/Users/robfe/OneDrive/Desktop/BBQ%20Sauce/pageaboutbbq.html">Page about BBQ Sauce</a>
+            <a href="pageaboutbbq.html">Page about BBQ Sauce</a>
           </li>
         </ul>
       </nav>
